# gartenroboter3000

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: install.sh
src/gartenroboter/: __init__.py  __main__.py  app.py
src/gartenroboter/config/: __init__.py  config_manager.py  settings.py  validation.py
src/gartenroboter/core/: __init__.py  pump.py  sensors.py  watering.py
src/gartenroboter/infra/: __init__.py  data_rotation.py  database.py  gpio.py  scheduler.py
src/gartenroboter/services/: __init__.py  sun.py  weather.py
src/gartenroboter/services/telegram/: __init__.py  bot.py  commands.py  notifier.py  security.py
systemd/: gartenroboter.service
tests/: conftest.py
tests/integration/: test_database.py
tests/unit/: test_pump.py  test_scheduler.py  test_validation.py
